clap_derive/tests/ui/flatten_and_methods.stderr
error: methods and doc comments are not allowed for flattened entry
  --> $DIR/flatten_and_methods.rs:22:19
   |
22 |     #[clap(short, flatten)]
   |                   ^^^^^^^
